tests/build/fail/property/child_type_constrains_ui_node.rs
use zero_ui::core::{property, NilUiNode, UiNode};

#[property(context)]
pub fn invalid_child(child: NilUiNode, input: bool) -> impl UiNode {
    child
}

fn main() {}
